--- a/app/client/style.css
+++ b/app/client/style.css
@@ -114,6 +114,10 @@ footer #copyright {
     width: 25vw;
   }
 
+  #navbar .company-logo {
+    width: 25vw;
+  }
+
   /*End Navbar*/
 
   /*Footer*/
