modified CSS for logo size

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -151,6 +151,10 @@ footer #copyright {
     width: 50vw;
   }
 
+  #navbar .company-logo {
+    width: 50vw;
+  }
+
   /*Navbar End*/
 
   /*Footer*/
